--- a/kubernetes/main/talos/talconfig.yaml
+++ b/kubernetes/main/talos/talconfig.yaml
@@ -46,6 +46,14 @@ nodes:
             mtu: 1500
             dhcpOptions:
               routeMetric: 4096
+    patches:
+      - |-
+        machine:
+          sysfs:
+            devices.system.cpu.cpu0.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu1.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu2.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu3.cpufreq.energy_performance_preference: balance_power
 
   - hostname: nuc13.internal
     ipAddress: 192.168.20.13
@@ -64,6 +72,26 @@ nodes:
           ip: *talosControlplaneVip
         vlans:
           - *vlan30
+    patches:
+      - |-
+        machine:
+          sysfs:
+            devices.system.cpu.cpu0.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu1.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu2.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu3.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu4.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu5.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu6.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu7.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu8.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu9.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu10.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu11.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu12.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu13.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu14.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu15.cpufreq.energy_performance_preference: balance_power
 
   - hostname: nuc14.internal
     ipAddress: 192.168.20.14
@@ -86,6 +114,32 @@ nodes:
           ip: *talosControlplaneVip
         vlans:
           - *vlan30
+    patches:
+      - |-
+        machine:
+          sysfs:
+            devices.system.cpu.cpu0.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu1.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu2.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu3.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu4.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu5.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu6.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu7.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu8.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu9.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu10.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu11.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu12.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu13.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu14.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu15.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu16.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu17.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu18.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu19.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu20.cpufreq.energy_performance_preference: balance_power
+            devices.system.cpu.cpu21.cpufreq.energy_performance_preference: balance_power
 
 controlPlane:
   nodeLabels:
@@ -227,15 +281,6 @@ controlPlane:
           fs.inotify.max_user_instances: 8192    # Watchdog
           fs.inotify.max_user_watches: 1048576   # Watchdog
 
-    # Custom sysfs settings
-    - |-
-      machine:
-        sysfs:
-          devices.system.cpu.cpu0.cpufreq.energy_performance_preference: balance_power
-          devices.system.cpu.cpu1.cpufreq.energy_performance_preference: balance_power
-          devices.system.cpu.cpu2.cpufreq.energy_performance_preference: balance_power
-          devices.system.cpu.cpu3.cpufreq.energy_performance_preference: balance_power
-
     # Mount openebs-hostpath in kubelet
     - |-
       machine:
@@ -254,7 +299,7 @@ controlPlane:
             # Intel GPU
             - SUBSYSTEM=="drm", KERNEL=="renderD*", GROUP="44", MODE="0660"
             # Zigbee Stick
-            - SUBSYSTEM=="usb", ATTRS{idVendor}=="10c4", ATTRS{idProduct}=="ea60", GROUP="20", MODE="0660"
+            - SUBSYSTEM=="usb", ATTRS{idVendor}=="10c4", ATTRS{idProduct}=="ea60", GROUP="20", MODE="0660", TAG+="uaccess"
 
     # Disable default API server admission plugins.
     - |-
