--- a/kubernetes/main/apps/default/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/zigbee2mqtt/app/helmrelease.yaml
@@ -75,7 +75,11 @@ spec:
                 squat.ai/cc2652: 1
                 memory: 202M
             securityContext:
-              privileged: true
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities:
+                drop:
+                  - ALL
 
     defaultPodOptions:
       nodeSelector:
