--- a/kubernetes/main/apps/networking/external-dns/app/unifi/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/external-dns/app/unifi/helmrelease.yaml
@@ -60,6 +60,7 @@ spec:
           timeoutSeconds: 5
     extraArgs:
       - --ignore-ingress-tls-spec
+    triggerLoopOnEvent: true
     policy: sync
     sources: ["ingress", "service"]
     txtOwnerId: main
