--- a/kubernetes/main/apps/networking/nginx/external/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/nginx/external/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
       replicaCount: 2
       service:
         annotations:
-          external-dns.alpha.kubernetes.io/hostname: external.${SECRET_DOMAIN}
+          external-dns.alpha.kubernetes.io/hostname: &hostname external.${SECRET_DOMAIN}
           lbipam.cilium.io/ips: 192.168.20.149
       ingressClassResource:
         name: external
@@ -46,8 +46,7 @@ spec:
       allowSnippetAnnotations: true
       enableAnnotationValidations: true
       config:
-        block-user-agents: "GPTBot,~*GPTBot*,ChatGPT-User,~*ChatGPT-User*,Google-Extended,~*Google-Extended*,CCBot,~*CCBot*,Omgilibot,~*Omgilibot*,FacebookBot,~*FacebookBot*" # taken from https://github.com/superseriousbusiness/gotosocial/blob/main/internal/web/robots.go
-        client-body-buffer-size: 100M
+        block-user-agents: "GPTBot,~*GPTBot*,ChatGPT-User,~*ChatGPT-User*,Google-Extended,~*Google-Extended*,CCBot,~*CCBot*,Omgilibot,~*Omgilibot*,FacebookBot,~*FacebookBot*" # taken from https://github.com/superseriousbusiness/gotosocial/blob/main/internal/web/robots.go        client-body-buffer-size: 100M
         client-body-timeout: 120
         client-header-timeout: 120
         enable-brotli: "true"
@@ -79,15 +78,10 @@ spec:
             any: true
       extraArgs:
         default-ssl-certificate: networking/${SECRET_CERT_NAME}-prod-tls
-      topologySpreadConstraints:
-        - maxSkew: 1
-          topologyKey: kubernetes.io/hostname
-          whenUnsatisfiable: DoNotSchedule
-          labelSelector:
-            matchLabels:
-              app.kubernetes.io/name: ingress-nginx
-              app.kubernetes.io/instance: nginx-external
-              app.kubernetes.io/component: controller
+        publish-status-address: *hostname
+      terminationGracePeriodSeconds: 120
+      publishService:
+        enabled: false
       resources:
         requests:
           cpu: 100m
