--- a/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
@@ -37,10 +37,12 @@ spec:
                 "mac": "f0:57:bc:d7:c1:49"
               }]
           securityContext:
-            runAsUser: 65534
-            runAsGroup: 65533
-            fsGroup: 65533
+            runAsNonRoot: true
+            runAsUser: 1000
+            runAsGroup: 1000
+            fsGroup: 1000
             fsGroupChangePolicy: OnRootMismatch
+            seccompProfile: { type: RuntimeDefault }
 
         initContainers:
           01-init-db:
@@ -63,31 +65,24 @@ spec:
                 cpu: 41m
                 memory: 552Mi
               limits:
-                memory: 552Mi
+                memory: 1Gi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              capabilities:
-                drop:
-                  - ALL
+              capabilities: { drop: ["ALL"] }
 
 
           code-server:
             image:
               repository: ghcr.io/coder/code-server
               tag: 4.95.3@sha256:6d74583d68179cbb6ddadc2518b450d2ac3eaec2d342474fe1941e03371cd2cf
-            args:
-              - --auth
-              - none
-              - --disable-telemetry
-              - --disable-update-check
-              - --user-data-dir
-              - /config/.code-server
-              - --extensions-dir
-              - /config/.code-server
-              - --port
-              - "12321"
-              - /config
+            args: [
+              "--auth", "none",
+              "--user-data-dir", "/config/.vscode",
+              "--extensions-dir", "/config/.vscode",
+              "--port", "12321",
+              "/config"
+            ]
             env:
               HASS_SERVER: http://localhost:8123
             resources:
