--- a/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
@@ -125,7 +125,7 @@ spec:
           home-assistant:
             app:
               - path: /config
-            codes-erver:
+            codes-server:
               - path: /config
       logs:
         type: emptyDir
