--- a/kubernetes/main/apps/default/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/nextcloud/app/helmrelease.yaml
@@ -178,6 +178,7 @@ spec:
       enabled: true
       className: external
       annotations:
+        external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         nginx.ingress.kubernetes.io/proxy-body-size: "10G"
         nginx.ingress.kubernetes.io/enable-cors: "true"
         nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
