--- a/kubernetes/main/apps/default/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/zigbee2mqtt/app/helmrelease.yaml
@@ -77,14 +77,18 @@ spec:
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              capabilities:
-                drop:
-                  - ALL
+              capabilities: { drop: ["ALL"] }
 
     defaultPodOptions:
       nodeSelector:
         cc2652.feature.node.kubernetes.io/zigbee: "true"
       securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
+        seccompProfile: { type: RuntimeDefault }
         supplementalGroups:
           - 20
 
