--- a/kubernetes/main/apps/monitoring/kustomization.yaml
+++ b/kubernetes/main/apps/monitoring/kustomization.yaml
@@ -8,6 +8,8 @@ resources:
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kube-state-metrics/ks.yaml
+  - ./loki/ks.yaml
   - ./prometheus-operator-crds/ks.yaml
+  - ./promtail/ks.yaml
   - ./smartctl-exporter/ks.yaml
   - ./unpoller/ks.yaml
