--- a/kubernetes/main/apps/networking/cloudflare-ddns/app/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/cloudflare-ddns/app/helmrelease.yaml
@@ -34,8 +34,8 @@ spec:
               tag: v1.0.3@sha256:2ee2ba2f4741a771fdf6333dce33f50a4fc739f64388966d3c7d27c07c22f18b
             args: [
               "--zone-name", "${SECRET_DOMAIN}",
-              "--record-name", "external.${SECRET_DOMAIN}",
-              "--provider", "icanhazip"
+              "--record-name", "ipv4.${SECRET_DOMAIN}",
+              "--provider", "random"
             ]
             envFrom:
               - secretRef:
@@ -67,8 +67,8 @@ spec:
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
-        runAsUser: 65534
-        runAsGroup: 65534
+        runAsUser: 1000
+        runAsGroup: 1000
         seccompProfile: { type: RuntimeDefault }
     service:
       app:
