--- a/kubernetes/main/apps/networking/cloudflare-ddns/app/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/cloudflare-ddns/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
               tag: v1.0.3@sha256:2ee2ba2f4741a771fdf6333dce33f50a4fc739f64388966d3c7d27c07c22f18b
             args: [
               "--zone-name", "${SECRET_DOMAIN}",
-              "--record-name", "ipv4.${SECRET_DOMAIN}",
+              "--record-name", "external.${SECRET_DOMAIN}",
               "--provider", "random"
             ]
             envFrom:
