--- a/kubernetes/main/apps/monitoring/grafana/app/dashboards/grafana-energy-dashboard.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/dashboards/grafana-energy-dashboard.yaml
@@ -224,7 +224,7 @@ data:
                 "tags": []
               }
             ],
-            "title": "Stromverbrauch Media",
+            "title": "Stromverbrauch Homelab",
             "type": "stat"
           },
           {
@@ -322,7 +322,7 @@ data:
                 "tags": []
               }
             ],
-            "title": "Stromverbrauch Nas",
+            "title": "Stromverbrauch Media",
             "type": "stat"
           },
           {
@@ -835,7 +835,7 @@ data:
         },
         "timepicker": {},
         "timezone": "",
-        "title": "Energy consumption",
+        "title": "Energy",
         "uid": "hnUSSwcMk",
         "version": 1,
         "weekStart": ""
