Update dashboard, separate media and homelab

--- a/kubernetes/main/apps/monitoring/grafana/app/dashboards/grafana-energy-dashboard.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/dashboards/grafana-energy-dashboard.yaml
@@ -128,7 +128,7 @@ data:
                 "tags": []
               }
             ],
-            "title": "Stromverbrauch NAS",
+            "title": "Stromverbrauch Media",
             "type": "stat"
           },
           {
