yeet k8tz and k8s-ycl

--- a/kubernetes/main/apps/default/bazarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/bazarr/app/helmrelease.yaml
@@ -35,6 +35,8 @@ spec:
             image:
               repository: ghcr.io/onedr0p/postgres-init
               tag: 16.6
+            env:
+              TZ: ${TZ}
             envFrom: &envFrom
               - secretRef:
                   name: bazarr-secret
