--- a/kubernetes/main/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/plex/app/helmrelease.yaml
@@ -37,6 +37,8 @@ spec:
             image:
               repository: ghcr.io/onedr0p/plex
               tag: 1.41.3.9292-bc7397402@sha256:9a9196a109437035b9b20c8d368c569555623f14faf2247c3aa0a84cf568242d
+            env:
+              TZ: ${TZ}
             resources:
               requests:
                 gpu.intel.com/i915: 1
