--- a/kubernetes/main/apps/networking/kustomization.yaml
+++ b/kubernetes/main/apps/networking/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomization
   - ./cloudflare-ddns/ks.yaml
+  - ./cloudflared/ks.yaml
   - ./external-dns/ks.yaml
   - ./external-services/ks.yaml
   - ./multus/ks.yaml
