--- a/kubernetes/main/apps/networking/external-dns/ks.yaml
+++ b/kubernetes/main/apps/networking/external-dns/ks.yaml
@@ -25,7 +25,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app external-dns-unifi
+  name: &appname external-dns-unifi
   namespace: flux-system
 spec:
   targetNamespace: networking
