--- a/kubernetes/main/apps/networking/cloudflared/app/externalsecret.yaml
+++ b/kubernetes/main/apps/networking/cloudflared/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
           {
             "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
             "TunnelSecret": "{{ .CLOUDFLARE_TUNNEL_SECRET }}",
-            "TunnelID": "${CLOUDFLARE_TUNNEL_ID}"
+            "TunnelID": "{{ .CLOUDFLARE_TUNNEL_ID }}"
           }
   data:
     - secretKey: CLOUDFLARE_ACCOUNT_TAG
