--- a/kubernetes/main/talos/talconfig.yaml
+++ b/kubernetes/main/talos/talconfig.yaml
@@ -279,6 +279,8 @@ controlPlane:
         sysctls:
           fs.inotify.max_user_instances: 8192    # Watchdog
           fs.inotify.max_user_watches: 1048576   # Watchdog
+          net.core.rmem_max: 67108864            # Cloudflared / QUIC
+          net.core.wmem_max: 67108864            # Cloudflared / QUIC
 
     # Mount openebs-hostpath in kubelet
     - |-
