--- a/kubernetes/main/apps/networking/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/cloudflared/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
               - --config
               - /etc/cloudflared/config/config.yaml
               - run
-              - 13a8cf0a-e16c-468b-a7c2-1fdd1719394e
+              - "${SECRET_CLOUDFLARE_TUNNEL_ID}"
             probes:
               liveness: &probes
                 enabled: true
