--- a/kubernetes/main/apps/networking/cloudflared/app/dnsendpoint.yaml
+++ b/kubernetes/main/apps/networking/cloudflared/app/dnsendpoint.yaml
@@ -6,6 +6,6 @@ metadata:
   name: cloudflared
 spec:
   endpoints:
-    - dnsName: "ipv4.${SECRET_DOMAIN}"
+    - dnsName: "external.${SECRET_DOMAIN}"
       recordType: CNAME
       targets: ["${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
