--- a/kubernetes/main/apps/default/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/mosquitto/app/helmrelease.yaml
@@ -58,8 +58,9 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
-
     service:
       app:
         controller: mosquitto
