--- a/kubernetes/main/apps/default/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/mosquitto/app/helmrelease.yaml
@@ -74,7 +74,7 @@ spec:
             port: 1883
 
     persistence:
-      config:
+      data:
         enabled: true
         existingClaim: *app
       config-file:
