--- a/kubernetes/main/apps/databases/kustomization.yaml
+++ b/kubernetes/main/apps/databases/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
   - ./dragonfly/ks.yaml
-  - ./postgres-backup/ks.yaml
+  - ./emqx/ks.yaml
   - ./influxdb/ks.yaml
+  - ./postgres-backup/ks.yaml
