--- a/kubernetes/main/apps/default/govee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/govee2mqtt/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
           app:
             env:
               TZ: ${TZ}
-              GOVEE_MQTT_HOST: mosquitto.default.svc.cluster.local
+              GOVEE_MQTT_HOST: emqx-listeners.databases.svc.cluster.local
               GOVEE_MQTT_PORT: 1883
               GOVEE_TEMPERATURE_SCALE: C
               GOVEE_LAN_BROADCAST_ALL: true
