--- a/kubernetes/main/apps/networking/multus/app/kustomization.yaml
+++ b/kubernetes/main/apps/networking/multus/app/kustomization.yaml
@@ -1,8 +1,14 @@
 ---
-# yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # renovate: depName=k8snetworkplumbingwg/network-attachment-definition-client datasource=github-releases
+  - https://raw.githubusercontent.com/k8snetworkplumbingwg/network-attachment-definition-client/refs/tags/v1.7.5/artifacts/networks-crd.yaml
   - ./helmrelease.yaml
   - ./rbac.yaml
-  - ./crd.yaml
+configMapGenerator:
+  - name: multus-configmap
+    files:
+      - ./config/00-multus.conf
+generatorOptions:
+  disableNameSuffixHash: true
