--- a/kubernetes/main/apps/networking/multus/ks.yaml
+++ b/kubernetes/main/apps/networking/multus/ks.yaml
@@ -3,31 +3,42 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: multus
+  name: &appname multus
   namespace: flux-system
 spec:
   targetNamespace: networking
-  interval: 10m
-  path: ./kubernetes/main/apps/networking/multus/app
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
+  dependsOn:
+    - name: cilium
+  interval: 30m
+  timeout: 5m
+  path: "./kubernetes/main/apps/networking/multus/app"
   prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
   wait: true
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: multus-config
+  name: &appname multus-networks
   namespace: flux-system
 spec:
   targetNamespace: networking
-  interval: 10m
-  path: ./kubernetes/main/apps/networking/multus/config
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
+  dependsOn:
+    - name: multus
+  interval: 30m
+  timeout: 5m
+  path: "./kubernetes/main/apps/networking/multus/networks"
   prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
   wait: true
-  dependsOn:
-    - name: multus
