fix multus dependsOns

--- a/kubernetes/main/apps/default/govee2mqtt/ks.yaml
+++ b/kubernetes/main/apps/default/govee2mqtt/ks.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   targetNamespace: default
   dependsOn:
-    - name: multus-config
+    - name: multus-networks
     - name: external-secrets-stores
   commonMetadata:
     labels:
