--- a/kubernetes/main/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/main/bootstrap/apps/helmfile.yaml
@@ -23,7 +23,7 @@ repositories:
 
 releases:
   - name: prometheus-operator-crds
-    namespace: observability
+    namespace: monitoring
     chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
     version: 17.0.2
 
@@ -32,7 +32,7 @@ releases:
     chart: cilium/cilium
     version: 1.16.5
     values: ["../../apps/kube-system/cilium/app/helm-values.yaml"]
-    needs: ["observability/prometheus-operator-crds"]
+    needs: ["monitoring/prometheus-operator-crds"]
 
   - name: coredns
     namespace: kube-system
