--- a/kubernetes/main/apps/networking/nginx/internal/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/nginx/internal/helmrelease.yaml
@@ -46,6 +46,7 @@ spec:
       allowSnippetAnnotations: true
       enableAnnotationValidations: true
       config:
+        annotations-risk-level: Critical
         block-user-agents: "GPTBot,~*GPTBot*,ChatGPT-User,~*ChatGPT-User*,Google-Extended,~*Google-Extended*,CCBot,~*CCBot*,Omgilibot,~*Omgilibot*,FacebookBot,~*FacebookBot*" # taken from https://github.com/superseriousbusiness/gotosocial/blob/main/internal/web/robots.go
         client-body-buffer-size: 100M
         client-body-timeout: 120
