--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -172,8 +172,8 @@ spec:
           revision: 3
           datasource: Prometheus
         smart:
-          # renovate: depName="Dashboard for smartctl_exporter"
-          gnetId: 20204
+          # renovate: depName="SMARTctl Exporter Dashboard"
+          gnetId: 22604
           revision: 1
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
