--- a/kubernetes/main/apps/default/umlautadaptarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/umlautadaptarr/app/helmrelease.yaml
@@ -38,7 +38,9 @@ spec:
               SONARR__HOST: http://sonarr.default.svc.cluster.local:80
               RADARR__ENABLED: true
               RADARR__HOST: http://radarr.default.svc.cluster.local:80
-            envFrom: umlautadaptarr-secret
+            envFrom:
+              - secretRef:
+                  name: umlautadaptarr-secret
             resources:
               requests:
                 cpu: 5m
