--- a/kubernetes/main/apps/default/umlautadaptarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/umlautadaptarr/app/helmrelease.yaml
@@ -59,3 +59,9 @@ spec:
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
+    service:
+      app:
+        controller: umlautadaptarr
+        ports:
+          http:
+            port: 5006
