--- a/kubernetes/main/apps/default/recyclarr/app/config/recyclarr.yml
+++ b/kubernetes/main/apps/default/recyclarr/app/config/recyclarr.yml
@@ -95,8 +95,6 @@ radarr:
         assign_scores_to:
           - name: SQP-1 (1080p)
           - name: SQP-1 (2160p)
-          - name: HD-Prefer German
-          - name: UHD-Prefer German
 
       # German Unwanted
       - trash_ids:
@@ -115,11 +113,18 @@ radarr:
       # German Audio
       - trash_ids:
           - 86bc3115eb4e9873ac96904a4a68e19e # German
-          - f845be10da4f442654c13e1f2c3d6cd5 # German DL
           - 6aad77771dabe9d3e9d7be86f310b867 # German DL (undefined)
         assign_scores_to:
           - name: HD-Prefer German
           - name: UHD-Prefer German
+
+      # Manually set German DL to 10001
+      - trash_ids:
+          - f845be10da4f442654c13e1f2c3d6cd5 # German DL
+        assign_scores_to:
+          - name: HD-Prefer German
+          - name: UHD-Prefer German
+            score: 10001
 
       # German HQ Source Groups HD
       - trash_ids:
@@ -210,4 +215,25 @@ radarr:
           - 9364dd386c9b4a1100dde8264690add7 # HLG
           - 923b6abef9b17f937fab56cfcf89e1f1 # DV (WEBDL) -10000
         assign_scores_to:
+          - name: UHD-Prefer German
+
+        # Streaming Services
+      - trash_ids:
+        - b3b3a6ac74ecbd56bcdbefa4799fb9df # AMZN
+        - 40e9380490e748672c2522eaaeb692f7 # ATVP
+        - cc5e51a9e85a6296ceefe097a77f12f4 # BCORE
+        - 16622a6911d1ab5d5b8b713d5b0036d4 # CRiT
+        - 84272245b2988854bfb76a16e60baea5 # DNSP
+        - 509e5f41146e278f9eab1ddaceb34515 # HBO
+        - 5763d1b0ce84aff3b21038eea8e9b8ad # HMAX
+        - 526d445d4c16214309f0fd2b3be18a89 # HULU
+        - e0ec9672be6cac914ffad34a6b077209 # iT
+        - 6a061313d22e51e0f25b7cd4dc065233 # MAX
+        - 2a6039655313bf5dab1e43523b62c374 # MA
+        - 170b1d363bd8516fbf3a3eb05d4faff6 # NF
+        - e36a0ba1bc902b26ee40818a1d59b8bd # PMTP
+        - c9fd353f8f5f1baf56dc601c4cb29920 # PCOK
+        - c2863d2a50c9acad1fb50e53ece60817 # STAN
+        assign_scores_to:
+          - name: HD-Prefer German
           - name: UHD-Prefer German
