Add subcleaner to bazarr

--- a/kubernetes/main/apps/default/bazarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/default/bazarr/app/externalsecret.yaml
@@ -17,6 +17,7 @@ spec:
         POSTGRES_USERNAME: &dbUser "{{ .POSTGRES_USERNAME }}"
         POSTGRES_PASSWORD: &dbPass "{{ .POSTGRES_PASSWORD }}"
         POSTGRES_PORT: "5432"
+        PLEX_TOKEN: "{{ .PLEX_TOKEN }}"
         # Postgres Init
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_HOST: *dbHost
@@ -64,3 +65,11 @@ spec:
       remoteRef:
         key: 2ad3fcad-e666-4701-b44c-a4e6e5cc5da3
         property: password
+    - secretKey: PLEX_TOKEN
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 3a2aa0ba-39ad-4b7e-b0c3-8861d16a56d0
+        property: token
