add subcleaner configmapgen

--- a/kubernetes/main/apps/default/bazarr/app/kustomization.yaml
+++ b/kubernetes/main/apps/default/bazarr/app/kustomization.yaml
@@ -5,3 +5,9 @@ resources:
   - ./helmrelease.yaml
   - ./externalsecret.yaml
   - ../../../../templates/volsync
+configMapGenerator:
+  - name: bazarr-scripts
+    files:
+      - subcleaner.sh=./config/subcleaner.sh
+generatorOptions:
+  disableNameSuffixHash: true
